// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render expense summery 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     total is 
    $0.00
  </h1>
</div>
`;

exports[`should correctly render expense summery with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    4
     
    expenses
     total is 
    $0.00
  </h1>
</div>
`;
